# stavki_v2

./: .env.example  .gitignore  README.md  append_manual_odds.py  columns_list.txt  comprehensive_audit_report.md  debug_barca_ev.py  debug_bot_manager.py  debug_data_load.py  debug_live_levante.py  debug_out.txt  debug_output.txt  debug_output_fixed.txt  debug_pipeline.py  debug_pipeline_repro.py  debug_source.txt  debug_system.py  deep_interaction_v3.pth  fetch_log.txt  find_high_ev.py  fix_odds_api.py  fix_odds_api_mappings.py  full_scan_log.txt  harvest_trends.out  manual_scan.py  print_shapes.py  pyproject.toml  reproduce_kelly.py  requirements.txt  retrain_log.txt  skill_improvements.md  stavki_watchdog.service  temp_build.py  test_all_ev.py  test_barsa.py  test_canonical.py  test_daily.py  test_drop.py  test_history.py  test_kelly_drawdown.py  (+12 more)
.cache/: historical_matches.parquet
artifacts/: critical_path_failfast_report.json  hotfix_contract_report.json  no_placeholder_tests_report.json  post_task_status.txt  pre_task_status.txt  prompt1_final_verification.md  prompt1_scope_report.json  prompt1_truth_report.json  prompt1_truth_report.md  prompt2_evidence_consistency_report.json  prompt2_final_verification.md  prompt2_pre_task_status.txt  prompt2_scope_report.json  prompt2_test_rigor_report.json  prompt2_test_rigor_report.md  prompt2_truth_report.json  prompt2_truth_report.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: betting_thresholds.json  selected_features.json  team_synonyms.json  user_settings.json
(+337 files in other folders)
